
  Only one VALUE-EXPR is supported, compared to the multiple account
  regexps supported before.  However, since value expression allow for
  logic chaining, there is no loss in functionality.  Also, by using a
  VALUE-EXPR as a predicate, matching may be much more comprehensive
  and selective.

- The use of "+" and "-" in ledger files (to specify permanent
  regexps) has been removed.

- -l now takes a value expression as the "calculation predicate".
  To mimic the old behavior of "-l \$100", use: -d "T&AT>{\$100}"

- The -S flag now takes a value expression as the sorting criteria.
  To sort on the amount, use -S T (balance) or -S t (register).

- If Boost.Python is installed, ledger supports full, two-way Python
  integration.  This feature is enabled by passing --enable-python to
  the "configure" script before building.  Ledger can then be used as
  a module (ledger.so), as well as supporting Python function calls
  directly from value expressions.  See main.py for an example of
  driving Ledger from Python.  It implements nearly all the
  functionality of the C++ driver, main.cc.

  Note that this feature has yet to mature, and so is not being
  supported in this release.  It is mostly functional, however, and
  those with a desire to tinker are welcome to play with it.

* 1.7

- Pricing histories are now supported, so that ledger remembers
  historical pricing of all commodities, and can give register reports
  based on past and present market values, as well as the original
  cost basis.  See README for more details on the new option switches.

* 1.6

- Can now parse timeclock files.  These are simple timelogs that track
  in/out events, which can be maintained using my timeclock tool.  By
  allowing ledger to parse these, it means that reporting can be done
  on them in the same way as a ledger file (the commodities is "h",
  for hours); and it means that doing things like tracking billable